--- a/slides/slides2.html
+++ b/slides/slides2.html
@@ -61,10 +61,10 @@ glimpse(random)
 ```
 ## Rows: 1,000
 ## Columns: 4
-## $ normal   &lt;dbl&gt; 3.7522709, 1.2230280, 5.8995260, 3.907138…
-## $ uniform  &lt;dbl&gt; 3.029750, 3.789954, 4.654102, 2.259348, 3…
-## $ binomial &lt;int&gt; 0, 1, 0, 0, 0, 0, 1, 0, 1, 0, 1, 1, 0, 0,…
-## $ sample   &lt;int&gt; 1, 7, 4, 6, 10, 2, 1, 2, 5, 10, 5, 3, 5, …
+## $ normal   [3m[90m&lt;dbl&gt;[39m[23m -3.595925, 10.380393, 1.488586, 6.589246,…
+## $ uniform  [3m[90m&lt;dbl&gt;[39m[23m 2.939293, 1.667571, 3.984386, 2.447191, 4…
+## $ binomial [3m[90m&lt;int&gt;[39m[23m 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0,…
+## $ sample   [3m[90m&lt;int&gt;[39m[23m 9, 2, 9, 6, 10, 4, 1, 1, 3, 10, 1, 3, 8, …
 ```
 
 ---
@@ -188,11 +188,11 @@ glimpse(us_comp_value)
 ```
 ## Rows: 25,426
 ## Columns: 5
-## $ gvkey        &lt;chr&gt; "001004", "001004", "001004", "001004…
-## $ year         &lt;dbl&gt; 2011, 2011, 2012, 2013, 2014, 2015, 2…
-## $ total_comp   &lt;dbl&gt; 5786.400, 5786.400, 4182.832, 5247.77…
-## $ market_value &lt;dbl&gt; 485.2897, 485.2897, 790.0029, 961.308…
-## $ ni           &lt;dbl&gt; 67.723, NA, 55.000, 72.900, 10.200, 4…
+## $ gvkey        [3m[90m&lt;chr&gt;[39m[23m "001004", "001004", "001004", "001004…
+## $ year         [3m[90m&lt;dbl&gt;[39m[23m 2011, 2011, 2012, 2013, 2014, 2015, 2…
+## $ total_comp   [3m[90m&lt;dbl&gt;[39m[23m 5786.400, 5786.400, 4182.832, 5247.77…
+## $ market_value [3m[90m&lt;dbl&gt;[39m[23m 485.2897, 485.2897, 790.0029, 961.308…
+## $ ni           [3m[90m&lt;dbl&gt;[39m[23m 67.723, NA, 55.000, 72.900, 10.200, 4…
 ```
 
 ---
@@ -408,13 +408,13 @@ glimpse(us_comp_value)
 ```
 ## Rows: 21,879
 ## Columns: 7
-## $ gvkey        &lt;chr&gt; "001004", "001004", "001004", "001004…
-## $ execid       &lt;chr&gt; "09249", "09249", "09249", "09249", "…
-## $ year         &lt;dbl&gt; 2011, 2011, 2012, 2013, 2014, 2015, 2…
-## $ shares       &lt;dbl&gt; 2.964, 2.964, 2.893, 3.444, 3.877, 4.…
-## $ total_comp   &lt;dbl&gt; 5786.400, 5786.400, 4182.832, 5247.77…
-## $ market_value &lt;dbl&gt; 485.2897, 485.2897, 790.0029, 961.308…
-## $ wealth       &lt;dbl&gt; 14.383987, 14.383987, 22.854784, 33.1…
+## $ gvkey        [3m[90m&lt;chr&gt;[39m[23m "001004", "001004", "001004", "001004…
+## $ execid       [3m[90m&lt;chr&gt;[39m[23m "09249", "09249", "09249", "09249", "…
+## $ year         [3m[90m&lt;dbl&gt;[39m[23m 2011, 2011, 2012, 2013, 2014, 2015, 2…
+## $ shares       [3m[90m&lt;dbl&gt;[39m[23m 2.964, 2.964, 2.893, 3.444, 3.877, 4.…
+## $ total_comp   [3m[90m&lt;dbl&gt;[39m[23m 5786.400, 5786.400, 4182.832, 5247.77…
+## $ market_value [3m[90m&lt;dbl&gt;[39m[23m 485.2897, 485.2897, 790.0029, 961.308…
+## $ wealth       [3m[90m&lt;dbl&gt;[39m[23m 14.383987, 14.383987, 22.854784, 33.1…
 ```
 
 ---
@@ -568,7 +568,7 @@ print(prettyNum(c(observed_cor, random_cor), dig = 3))
 ```
 
 ```
-## [1] "-0.0047"  "-0.00263"
+## [1] "-0.0047" "0.00468"
 ```
 
 ---
