--- a/auxilary/assignment1.html
+++ b/auxilary/assignment1.html
@@ -305,12 +305,12 @@ pre code {
 }</code></pre>
 <pre><code>## Loading required package: cowplot</code></pre>
 <pre class="r"><code>library(tidyverse)</code></pre>
-<pre><code>## ── Attaching packages ────────────────────────────────────────────────────────────────────────── tidyverse 1.3.1 ──</code></pre>
+<pre><code>## ── Attaching packages ───────────────────────────────────────────────────────────────────────────── tidyverse 1.3.1 ──</code></pre>
 <pre><code>## ✔ ggplot2 3.3.5     ✔ purrr   0.3.4
 ## ✔ tibble  3.1.6     ✔ dplyr   1.0.7
 ## ✔ tidyr   1.1.4     ✔ stringr 1.4.0
 ## ✔ readr   2.1.1     ✔ forcats 0.5.1</code></pre>
-<pre><code>## ── Conflicts ───────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
+<pre><code>## ── Conflicts ──────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
 ## ✖ dplyr::filter() masks stats::filter()
 ## ✖ dplyr::lag()    masks stats::lag()</code></pre>
 <pre class="r"><code>library(cowplot)
@@ -331,7 +331,7 @@ eval_assignment1 &lt;- FALSE</code></pre>
 <ul>
 <li><p>We are going to create a dataset with 1000 observations.</p></li>
 <li><p><code>high_performance</code> is 1 with probability .5 for each of the observations.</p></li>
-<li><p><code>donation</code> is 1 when the firm is a high performing firm and 1 otherwise. The signalling model represents the donation by <span class="math inline">\(a\)</span>.</p></li>
+<li><p><code>donation</code> is 1 when the firm is a high performing firm and 0 otherwise. The signalling model represents the donation by <span class="math inline">\(a\)</span>.</p></li>
 <li><p><code>return</code> or <span class="math inline">\(b\)</span> in the signalling model is 4 when the firm donates and 1 otherwise.</p></li>
 <li><p>In reality, we will never observe the underlying values perfectly; maybe there are other factors at work, maybe our data collection is imperfect. So, we will add some randomness to the variables. Donations are wrongly observed 10% of the time. We code this as a 90% chance that we have a correct observations: <code>rbinom(N, 1, .9)</code>. If we have a correct observation, <code>observed_donation</code> is <code>donation</code>, otherwise <code>observed_donation</code> is the opposite of <code>donation</code>.</p></li>
 <li><p><code>observed_return</code> is normally distributed with a mean of <code>return</code> and a standard deviation of 3.</p></li>
